--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <h1 id="title">test.nekoweb.org</h1>
+            <h1 id="title">spaghetti.nekoweb.org</h1>
         </header>
 
         <nav>
